# cstow

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUES.md  PLAN.md  README.md  go.mod  go.sum  main.go  repo.md
.claude/agent-memory/code-reviewer/: MEMORY.md  codebase-review-2026-03-31.md  publish-registry-review-2026-04-04.md
.claude/agents/: code-reviewer.md  debug-specialist.md
cmd/: abseil_integration_test.go  add.go  add_test.go  archive_patch_integration_test.go  artifact.go  artifact_index.go  artifact_index_test.go  artifact_test.go  build.go  build_test.go  checkabi.go  ci.go  clean.go  clean_test.go  deps.go  deps_test.go  doctor.go  doctor_test.go  e2e_workflow_test.go  fetch.go  fetch_artifact_test.go  fetch_build_chain_test.go  fetch_git_test.go  fetch_hashid_test.go  fetch_utils.go  gen.go  gen_test.go  grpc_install_test.go  init.go  install.go  install_integration_test.go  migrate.go  module_logger_test.go  package.go  package_test.go  publish.go  publish_fetch_e2e_test.go  publish_test.go  recursive_deps_integration_test.go  repository_flags.go  (+6 more)
docs/superpowers/plans/: 2026-04-01-repository-core.md  2026-04-02-build-type-cache-layout.md  2026-04-02-local-artifact-db.md  2026-04-03-local-artifact-index-closure.md  2026-04-05-auto-cmake-generation.md  2026-04-05-git-source-dependency.md  2026-04-05-package-add-command.md  2026-04-05-workspace-parallel-build.md  2026-04-07-bugfix-refactor.md
docs/superpowers/specs/: 2026-03-31-repository-system-design.md  2026-04-01-repository-core-design.md  2026-04-02-local-artifact-db-design.md  2026-04-03-local-artifact-index-closure-design.md  2026-04-04-artifact-hashid-publish-design.md  2026-04-05-auto-cmake-generation-design.md  2026-04-05-git-source-dependency-design.md  2026-04-05-package-add-command-design.md  2026-04-07-bugfix-refactor-design.md
examples/: .gitignore
examples/git-dependency-demo/: cstow.toml
examples/git-dependency-demo/src/: main.cpp
examples/hello-cstow/: CMakeLists.txt  cstow.toml
examples/hello-cstow/src/: main.cpp
examples/mylib/: CMakeLists.txt  cstow.toml
examples/mylib/include/mylib/: math.hpp
examples/mylib/src/: math.cpp
examples/use-gflags/: CMakeLists.txt  cstow.toml
examples/use-gflags/src/: main.cpp
examples/use-mylib/: CMakeLists.txt  cstow.toml
examples/use-mylib/src/: main.cpp
examples/workspace-demo/: CMakeLists.txt  CMakePresets.json  cstow.toml
examples/workspace-demo/app/: CMakeLists.txt  cstow.toml
examples/workspace-demo/app/src/: main.cpp
examples/workspace-demo/mathlib/: CMakeLists.txt  cstow.toml
examples/workspace-demo/mathlib/src/: math.cpp
examples/workspace-demo/stringlib/: CMakeLists.txt  cstow.toml
examples/workspace-demo/stringlib/include/stringlib/: join.hpp
examples/workspace-demo/stringlib/src/: join.cpp
internal/abi/: abi.go  abi_test.go
internal/artifactdb/: prune_test.go  store.go  store_test.go  sync.go  sync_test.go
internal/builder/: builder.go  builder_test.go  patch.go
internal/cmakegen/: cmakegen.go  cmakegen_test.go  cmakelists.go  discover.go  discover_test.go  presets.go
internal/config/: config.go  config_test.go
internal/flock/: flock.go
internal/hooks/: hooks.go
internal/legacy/: cmake_scanner.go  cmake_scanner_test.go
internal/pack/: pack.go  pack_test.go
internal/project/: scaffold.go
internal/registry/: s3client.go  s3client_test.go  s3config.go
internal/repository/: archive_test.go  finder.go  finder_test.go  integration_test.go  lint.go  lint_test.go  merge.go  merge_test.go  openssl_test.go  package.go  scaffold.go  scaffold_test.go  source.go  source_test.go
internal/resolver/: resolver.go  resolver_test.go
internal/toolchain/: detect.go  detect_test.go
internal/workspace/: graph.go  graph_test.go  scheduler.go  scheduler_test.go  workspace.go  workspace_test.go
